so far everything work except time

--- a/myweb/base/templates/base/home.html
+++ b/myweb/base/templates/base/home.html
@@ -1,3 +1,4 @@
+<!-- home.html -->
 {% extends 'main.html' %}
 {% load static %}
 
@@ -433,6 +434,8 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 </script>
 {% endblock %}
+
+
 
 
 
