Working on the dropdown

--- a/myweb/templates/navbar.html
+++ b/myweb/templates/navbar.html
@@ -4,16 +4,34 @@
 
 {% if request.user.is_authenticated %}
     <h3>Hello {{ request.user.username }}</h3>
-    <a href="{% url 'logout' %}"><h1>LOGOUT</h1></a>
 
     <form action="{% url 'search_results' %}" method="get" style="display: inline;">
         <input type="text" name="q" placeholder="Search for something..." />
         <button type="submit">Search</button>
     </form>
+
+    <div class="dropdown show">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            History
+        </a>
+
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'overdue_projects' %}">Overdue Projects</a>
+            <a class="dropdown-item" href="{% url 'upcoming_projects' %}">Upcoming Projects</a>
+            <a class="dropdown-item" href="#">Recent Tasks</a>
+        </div>
+    </div>
+
+    <a href="{% url 'logout' %}"><h1>LOGOUT</h1></a>
 {% else %}
     <a href="{% url 'login' %}"><h1>LOGIN/SIGN UP</h1></a>
 {% endif %}
 <hr>
+
+
+
+
+
 
 
 
