--- a/myweb/templates/main.html
+++ b/myweb/templates/main.html
@@ -1,28 +1,20 @@
 <!-- base/templates/main.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Project{% endblock %}</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    
     {% include 'navbar.html' %}
-    
-        {% if messages %}
-            <div class="messages">
-                {% for message in messages %}
-                    <h1> {{message}} </h1>
-                {% endfor %}
-            </div>
-        {% endif %}
-        
-
     {% block content %}
-    
-  
     {% endblock %}
-   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
