--- a/myweb/base/templates/base/home.html
+++ b/myweb/base/templates/base/home.html
@@ -1,4 +1,3 @@
-<!-- home.html -->
 {% extends 'main.html' %}
 {% load static %}
 
@@ -47,6 +46,14 @@
 .task-done {
     text-decoration: line-through;
 }
+
+.tag-label {
+    display: inline-block;
+    background-color: #f0f0f0;
+    border-radius: 3px;
+    padding: 2px 5px;
+    margin: 2px;
+}
 </style>
 
 {% if user.is_authenticated %}
@@ -58,6 +65,11 @@
         {% for project in projects %}
         <li id="project-{{ project.id }}">
             <span class="project-content">{% if project.is_done %}<del>{{ project.title }} - {{ project.description }} (Due: {{ project.due_date }})</del>{% else %}{{ project.title }} - {{ project.description }} (Due: {{ project.due_date }}){% endif %}</span>
+            <div>
+                {% for tag in project.tags.all %}
+                    <span class="tag-label">{{ tag.name }}</span>
+                {% endfor %}
+            </div>
             <button class="done-project-btn" data-project-id="{{ project.id }}">Done</button>
             <button class="edit-project-btn" data-project-id="{{ project.id }}">Edit</button>
             <button class="delete-project-btn" data-project-id="{{ project.id }}">Delete</button>
@@ -116,6 +128,11 @@
         {% for note in notes %}
         <li>
             {{ note.content }}
+            <div>
+                {% for tag in note.tags.all %}
+                    <span class="tag-label">{{ tag.name }}</span>
+                {% endfor %}
+            </div>
             <button class="edit-note-btn" data-note-id="{{ note.id }}">Edit</button>
             <button class="delete-note-btn" data-note-id="{{ note.id }}">Delete</button>
         </li>
@@ -168,6 +185,11 @@
         {% for task in tasks %}
         <li id="task-{{ task.id }}">
             <span class="task-content">{% if task.is_done %}<del>{{ task.content }}</del>{% else %}{{ task.content }}{% endif %}</span>
+            <div>
+                {% for tag in task.tags.all %}
+                    <span class="tag-label">{{ tag.name }}</span>
+                {% endfor %}
+            </div>
             <button class="done-task-btn" data-task-id="{{ task.id }}">Done</button>
             <button class="edit-task-btn" data-task-id="{{ task.id }}">Edit</button>
             <button class="delete-task-btn" data-task-id="{{ task.id }}">Delete</button>
@@ -432,6 +454,9 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 </script>
 {% endblock %}
+
+
+
 
 
 
