--- a/myweb/base/templates/base/note_form.html
+++ b/myweb/base/templates/base/note_form.html
@@ -1,11 +1,6 @@
-{% extends 'main.html' %}
-
-{% block content %}
-<h2>Edit Note</h2>
-<form method="POST">
+<!-- base/templates/note_form.html -->
+<form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Update</button>
+    <button type="submit">Save</button>
 </form>
-<a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
-{% endblock %}
