--- a/myweb/base/templates/base/project_form.html
+++ b/myweb/base/templates/base/project_form.html
@@ -1,10 +1,7 @@
-{% extends 'main.html' %}
-
-{% block content %}
-<h2>Update Project</h2>
+<!-- base/templates/project_form.html -->
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit">Save</button>
 </form>
-{% endblock %}
+
