--- a/myweb/templates/main.html
+++ b/myweb/templates/main.html
@@ -1,4 +1,3 @@
-<!-- base/templates/main.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,21 +10,24 @@
     {% include 'navbar.html' %}
     
     {% if messages %}
-        <div class="messages">
+        <div class="container mt-3">
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }}">{{ message }}</div>
             {% endfor %}
         </div>
     {% endif %}
     
-    {% block content %}
-    {% endblock %}
+    <div class="container mt-3">
+        {% block content %}
+        {% endblock %}
+    </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
 
 
 
