--- a/myweb/templates/navbar.html
+++ b/myweb/templates/navbar.html
@@ -1,41 +1,55 @@
-<a href="{% url 'home' %}"><h1>LOGO</h1></a>
-<a href="{% url 'home' %}"><h1>HOME</h1></a>
-
-{% if request.user.is_authenticated %}
-    <a href="{% url 'profile' %}" class="profile-link"><h3>Hello {{ request.user.username }}</h3></a>
-
-    <form action="{% url 'search_results' %}" method="get" style="display: inline;">
-        <input type="text" name="q" placeholder="Search for something..." />
-        <button type="submit">Search</button>
-    </form>
-
-    <div class="dropdown show">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            History
-        </a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="{% url 'overdue_projects' %}">Overdue Projects</a>
-            <a class="dropdown-item" href="{% url 'upcoming_projects' %}">Upcoming Projects</a>
-            <a class="dropdown-item" href="{% url 'recent_tasks' %}">Recent Tasks</a>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="{% url 'home' %}">My Project</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="tagsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Tags
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="tagsDropdown">
+                        {% for tag in tags %}
+                            <a class="dropdown-item" href="{% url 'filter_by_tag' tag.id %}">{{ tag.name }}</a>
+                        {% endfor %}
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="historyDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        History
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="historyDropdown">
+                        <a class="dropdown-item" href="{% url 'recent_tasks' %}">Recent Tasks</a>
+                        <a class="dropdown-item" href="{% url 'overdue_projects' %}">Overdue Projects</a>
+                        <a class="dropdown-item" href="{% url 'upcoming_projects' %}">Upcoming Projects</a>
+                    </div>
+                </li>
+                <form class="form-inline my-2 my-lg-0 ml-3" action="{% url 'search_results' %}" method="get">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q">
+                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
+</nav>
 
-    <div class="dropdown show">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="tagsDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Tags
-        </a>
-        <div class="dropdown-menu" aria-labelledby="tagsDropdownMenuLink">
-            {% for tag in tags %}
-                <a class="dropdown-item" href="{% url 'filter_by_tag' tag.id %}">{{ tag.name }}</a>
-            {% endfor %}
-        </div>
-    </div>
 
-    <a href="{% url 'logout' %}"><h1>LOGOUT</h1></a>
-{% else %}
-    <a href="{% url 'login' %}"><h1>LOGIN/SIGN UP</h1></a>
-{% endif %}
-<hr>
+
 
 
 
